...
            android:textSize="20sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/lblDetalleNombreTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="20sp" />
        <Space
            android:layout_width="match_parent"
...
            android:textSize="20sp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/lblDetalleDescripcionTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="20sp" />
        <Space
            android:layout_width="match_parent"
...
