<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CrearAlbumActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/lblNombreAlbum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Nombre del album"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/EDNombreAlbum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Introduce aquí el nombre del álbum"
            android:autofillHints="name"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/lblYearAlbum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Año de lanzamiento del álbum"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/EDYearAlbum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Introduce aquí el año de lanzamiento del álbum"
            android:autofillHints="creditCardExpirationDate"
            android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/lblGenero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Genero"
            android:textSize="20sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/spinnerGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/lblDescrip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Descripción"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/EDDescrip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Introduce aquí la Descripción"
            android:autofillHints="name"
            android:inputType="text|textMultiLine" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/lblrlabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Sello Discografico"
            android:textSize="20sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/spinnerSello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/BtnCrearAlbum"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:text="Crear"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/lblRequestCrearAlbum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:textSize="20sp"
            android:autofillHints="name"
            android:inputType="text"
            android:textStyle="italic" />
    </LinearLayout>
</ScrollView>